WebCore:

2009-02-16  Justin Garcia  <justin.garcia@apple.com>

        Reviewed by Eric Seidel.

        https://bugs.webkit.org/show_bug.cgi?id=15381
        execCommand justify modifies the contentEditable node

        * editing/CompositeEditCommand.cpp:
        (WebCore::CompositeEditCommand::moveParagraphContentsToNewBlockIfNecessary): Avoid modifying not just
        the body element, but any root editable element.

LayoutTests:

2009-02-16  Justin Garcia  <justin.garcia@apple.com>

        Reviewed by Eric Seidel.

        https://bugs.webkit.org/show_bug.cgi?id=15381
        execCommand justify modifies the contentEditable node

        * editing/execCommand/15381-expected.txt: Added.
        * editing/execCommand/15381.html: Added.

        Made this test cross platform and changed it to reflect the fix:
        * editing/execCommand/5062376-expected.txt: Added.
        * editing/execCommand/5062376.html:
        * platform/mac/editing/execCommand/5062376-expected.checksum: Removed.
        * platform/mac/editing/execCommand/5062376-expected.png: Removed.
        * platform/mac/editing/execCommand/5062376-expected.txt: Removed.



Canonical link: https://commits.webkit.org/33122@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@41026 268f45cc-cd09-0410-ab3c-d52691b4dbfc